# vm-vk-bot

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: bot.py  bot_commands.py  config.py  yandex_api.py
core/: bot_commands.py  init.py
nginx/: Dockerfile  nginx.conf.template
