[project]
name = "vm-vk-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.14.2"
dependencies = [
    "python-dotenv (==1.2.1)",
    "flask (==3.1.2)",
    "vk-api (==11.10.0)",
    "gunicorn (==25.0.1)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
